--- a/example.html
+++ b/example.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      .fui-dialog {
+        z-index: 9999;
+      }
+
+      .fui-dialog-mask {
+        z-index: 9998;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
