--- a/example.html
+++ b/example.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
-      .fui-dialog {
+      .x-dialog {
         z-index: 9999;
       }
 
-      .fui-dialog-mask {
+      .x-dialog-mask {
         z-index: 9998;
       }
     </style>
