--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Webpack App</title>
     <style>
       .x-dialog {
         z-index: 9999;
@@ -16,5 +16,5 @@
   </head>
   <body>
     <div id="root"></div>
-  </body>
+  <script type="text/javascript" src="example.js"></script></body>
 </html>
