--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-cmn-Hans">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title><%= htmlWebpackPlugin.options.title %></title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Webpack App</title>
+    <style>
+      .x-dialog {
+        z-index: 9999;
+      }
+
+      .x-dialog-mask {
+        z-index: 9998;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="root"></div>
+  <script type="text/javascript" src="example.js"></script></body>
 </html>
